<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="@dimen/margin_10"
        android:text="@string/list_of_trip"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_trip"
        android:theme="@style/ButtonFillAppearanceGreen"
        app:cornerRadius="20dp"
        android:layout_marginEnd="@dimen/margin_10"
        tools:ignore="RelativeOverlap"
        android:layout_toStartOf="@+id/delete"
        android:padding="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_all"
        app:icon="@drawable/ic_delete"
        app:iconGravity="textStart"
        android:theme="@style/ButtonFillAppearanceRed"
        app:cornerRadius="@dimen/margin_40"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_10"
        tools:ignore="RelativeOverlap" />

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload"
        android:iconifiedByDefault="false"
        android:queryHint="Search Here"
        android:layout_marginTop="@dimen/margin_10"
        android:padding="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"/>

</RelativeLayout>
</layout>