<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|snap">

            <LinearLayout
                android:id="@+id/profile_backdrop"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingBottom="27dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_avatar"
                        android:layout_marginEnd="18dp"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_out"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:drawablePadding="15dp"
                        android:gravity="end"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/profile_image"
                        android:layout_alignTop="@id/profile_image"
                        app:drawableEndCompat="@drawable/ic_logout"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_image"
                        android:text="@string/demo_name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/staff_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/work_role"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_trip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_70"
                        android:layout_marginEnd="@dimen/margin_70"
                        android:text="@string/add_new_trip"
                        app:icon="@drawable/ic_add"
                        android:layout_marginTop="@dimen/margin_10"
                        app:iconGravity="textStart"
                        android:theme="@style/ButtonFillAppearanceRed"
                        app:cornerRadius="@dimen/margin_40"
                        android:layout_below="@+id/staff_id"/>

                </RelativeLayout>

            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>