<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="trip" type="com.greenwich.mexpense.model.Trip" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{trip.name}"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/date"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{trip.date_of_trip}"
                    android:layout_toStartOf="@+id/delete"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_centerVertical="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    app:icon="@drawable/ic_delete"
                    app:iconGravity="textStart"
                    android:theme="@style/ButtonFillAppearanceRed"
                    app:cornerRadius="@dimen/margin_40"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{trip.destination}"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/show"
                    android:layout_centerVertical="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show"
                    android:theme="@style/ButtonFillAppearanceGreen"
                    app:cornerRadius="@dimen/margin_40"
                    android:layout_toStartOf="@+id/edit"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:theme="@style/ButtonFillAppearanceYellow"
                    app:cornerRadius="@dimen/margin_40"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>